# jobsearch-rag

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_adapter.md
.github/skills/bdd-feedback-loop/: SKILL.md
.github/skills/bdd-testing/: SKILL.md
.github/skills/bdd-testing/references/: test-patterns.md
.github/skills/config-contracts/: SKILL.md
.github/skills/config-contracts/references/: toml-schemas.md
.github/skills/conventional-commits/: SKILL.md
.github/skills/feature-workflow/: SKILL.md
.github/skills/plan-updates/: SKILL.md
.github/skills/rescore-pipeline/: SKILL.md
.github/skills/rescore-pipeline/references/: jd-file-format.md
.github/skills/scoring-model/: SKILL.md
.github/skills/scoring-model/references/: embedding-synthesis.md
.github/skills/test-rewrite/: SKILL.md
.github/skills/tool-usage/: SKILL.md
.github/workflows/: ci.yml  release.yml
agent-skills/bdd-testing/: SKILL.md
agent-skills/feature-workflow/: SKILL.md
agent-skills/plan-updates/: SKILL.md
config/: global_rubric.toml  role_archetypes.toml  settings.toml
data/: resume.md
data/chroma_db/: .gitkeep
data/decisions/: .gitkeep
data/logs/: .gitkeep
docs/: ARCHITECTURE.md  CONFIG.md  DATA_FLOW.md  EVOLUTION.md  FAILURE_MODES.md  FEEDBACK_LOOP.md  RAG_PIPELINE.md  SCORING_ENGINE.md  TEAM_SCALING.md
src/jobsearch_rag/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py  text.py
src/jobsearch_rag/adapters/: __init__.py  base.py  indeed.py  linkedin.py  registry.py  session.py  weworkremotely.py  ziprecruiter.py
src/jobsearch_rag/export/: __init__.py  browser_tabs.py  csv_export.py  jd_files.py  markdown.py
src/jobsearch_rag/pipeline/: __init__.py  eval.py  ranker.py  rescorer.py  review.py  runner.py
src/jobsearch_rag/rag/: __init__.py  comp_parser.py  decisions.py  embedder.py  indexer.py  scorer.py  store.py
tests/: BDD_TEST_AUDIT.md  __init__.py  conftest.py  constants.py  test_adapter_layer.py  test_best_archetype_match.py  test_browser_failures.py  test_cli.py  test_comp_parser.py  test_comp_scoring.py  test_config.py  test_config_externalization.py  test_config_externalization_tuning.py  test_cross_run_dedup.py  test_cumulative_search.py  test_decisions.py  test_embedder.py  test_errors.py  test_eval.py  test_export.py  test_file_logging.py  test_indeed_extraction.py  test_indexer.py  test_integration.py  test_interactive_review.py  test_linkedin_extraction.py  test_main.py  test_observability.py  test_parallel_scoring.py  test_pipeline.py  test_privacy.py  test_rag_indexing.py  test_rag_pipeline.py  test_registry.py  test_rescore.py  test_runner.py  test_scorer.py  test_scoring.py  test_security.py  test_session_cdp.py  (+6 more)
tests/fixtures/: sample_jd.json  ziprecruiter_jd.html  ziprecruiter_results.html  ziprecruiter_serp_real.html
typings/_pytest/: python_api.pyi
typings/chromadb/: __init__.pyi  errors.pyi
typings/playwright_stealth/: __init__.pyi
