[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobsearch-rag"
version = "0.1.0"
description = "Local LLM + RAG pipeline for intelligent job search filtering"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "grimlor" }]

dependencies = [
    "actionable-errors>=0.1.0",
    "chromadb>=1.5,<2",
    "httpx>=0.27,<1",
    "ollama>=0.4,<1",
    "playwright>=1.49,<2",
    "playwright-stealth>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13,<2",
    "pre-commit>=4,<5",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "ruff>=0.8,<1",
    "taskipy>=1.14,<2",
]

[project.scripts]
jobsearch-rag = "jobsearch_rag.__main__:main"

# ---------------------------------------------------------------------------
# Taskipy
# ---------------------------------------------------------------------------
[tool.taskipy.tasks]
lint   = "uv run ruff check --fix src/ tests/"
format = "uv run ruff format src/ tests/"
type   = "uv run mypy src/ tests/"
test   = "uv run pytest tests/ -v"
cov    = "uv run pytest tests/ --cov=jobsearch_rag --cov-report=term-missing"
check  = "task lint && task type && task test"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "PLC0415",  # import-outside-top-level
    "PLC2701",  # import-private-name (preview)
]
ignore = [
    "E501",   # line length (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["jobsearch_rag"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
enable_error_code = ["possibly-undefined"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "ollama.*", "playwright.*", "playwright_stealth.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers -m 'not integration and not live'"
markers = [
    "integration: marks tests requiring live services (Ollama, browser)",
    "live: marks tests requiring live external sites (ZipRecruiter, etc.)",
]

# ---------------------------------------------------------------------------
# python-semantic-release
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = []
commit_message = "chore(release): {version}"
tag_format = "v{version}"
branch = "main"
build_command = ""
upload_to_pypi = false
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
